test/classes/constructors/dflt-ctor-generic-uninit-field-var-err-1.good
dflt-ctor-generic-uninit-field-var-err-1.chpl:5: error: unresolved call 'A.init()'
dflt-ctor-generic-uninit-field-var-err-1.chpl:1: note: candidates are: A.init(v)
